--- a/RFPDAAPP/wms_erp/src/main/res/values/strings.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="base_act_network_no">亲，当前网络不给力!</string>
 </resources>
