--- a/RFPDAAPP/wms_erp/src/main/res/values-zh-rCN/strings.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/values-zh-rCN/strings.xml
@@ -14,5 +14,6 @@
     <string name="unit">单位</string>
     <string name="specification">规格</string>
     <string name="count">数量</string>
+    <string name="batchcode">批次号</string>
 
 </resources>
