--- a/RFPDAAPP/wms_erp/src/main/res/values/strings.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="specification">规格</string>
     <string name="count">数量</string>
     <string name="batchcode">批次号</string>
+    <string name="firstonshelvedate">首次上架日期</string>
+    <string name="lastonshelvedate">最近上架日期</string>
 </resources>
